--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,9 @@
         <item>en</item>
         <item>ru</item>
     </string-array>
+    <string-array name="styleSpinner">
+        <item>Black</item>
+        <item>Green</item>
+        <item>Blue</item>
+    </string-array>
 </resources>
