--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
         <item>en</item>
         <item>ru</item>
     </string-array>
+    <string-array name="styleSpinner">
+        <item>Black</item>
+        <item>Green</item>
+        <item>Blue</item>
+    </string-array>
 </resources>
